--- a/SBC.WPF/Views/MainWindow.axaml
+++ b/SBC.WPF/Views/MainWindow.axaml
@@ -146,46 +146,45 @@
         <!--  Left Panel navigation  -->
         <Border Grid.Row="1" Background="#F1F1F1">
             <Grid>
-				<ListBox Margin="5,10,7,5"
+                <ListBox
+                    Margin="5,10,7,5"
+                    Background="Transparent"
                     ItemTemplate="{StaticResource NavItemTemplate}"
                     ItemsSource="{Binding TestGroups}"
-                    SelectedItem="{Binding SelectedTestGroup}"
-					Background="Transparent">
-					<ListBox.Styles>
-						<!-- Base Style -->
-						<Style Selector="ListBoxItem">
-							<Setter Property="Padding" Value="10,6"/>
-							<Setter Property="Cursor" Value="Hand"/>
-							<Setter Property="MinHeight" Value="32"/>
-							<Setter Property="HorizontalContentAlignment" Value="Left"/>
-							<Setter Property="VerticalContentAlignment" Value="Center"/>
-							<Setter Property="Template">
-								<ControlTemplate>
-									<Border
-										Name="PART_Border"
-										Background="{TemplateBinding Background}"
-										Padding="{TemplateBinding Padding}"
-										CornerRadius="6">
-										<ContentPresenter
-											Content="{TemplateBinding Content}"
-											ContentTemplate="{TemplateBinding ContentTemplate}" />
-									</Border>
-								</ControlTemplate>
-							</Setter>
-						</Style>
+                    SelectedItem="{Binding SelectedTestGroup}">
+                    <ListBox.Styles>
+                        <!--  Base Style  -->
+                        <Style Selector="ListBoxItem">
+                            <Setter Property="Padding" Value="10,6" />
+                            <Setter Property="Cursor" Value="Hand" />
+                            <Setter Property="MinHeight" Value="32" />
+                            <Setter Property="HorizontalContentAlignment" Value="Left" />
+                            <Setter Property="VerticalContentAlignment" Value="Center" />
+                            <Setter Property="Template">
+                                <ControlTemplate>
+                                    <Border
+                                        Name="PART_Border"
+                                        Padding="{TemplateBinding Padding}"
+                                        Background="{TemplateBinding Background}"
+                                        CornerRadius="6">
+                                        <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" />
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter>
+                        </Style>
 
-						<!-- Hover Style -->
-						<Style Selector="ListBoxItem:pointerover">
-							<Setter Property="Foreground" Value="{StaticResource ButtonBackgroundColor}"/>
-						</Style>
+                        <!--  Hover Style  -->
+                        <Style Selector="ListBoxItem:pointerover">
+                            <Setter Property="Foreground" Value="{StaticResource ButtonBackgroundColor}" />
+                        </Style>
 
-						<!-- Selected Style -->
-						<Style Selector="ListBoxItem:selected">
-							<Setter Property="Background" Value="{StaticResource ButtonBackgroundColor}"/>
-							<Setter Property="Foreground" Value="White"/>
-						</Style>
-					</ListBox.Styles>
-				</ListBox>
+                        <!--  Selected Style  -->
+                        <Style Selector="ListBoxItem:selected">
+                            <Setter Property="Background" Value="{StaticResource ButtonBackgroundColor}" />
+                            <Setter Property="Foreground" Value="White" />
+                        </Style>
+                    </ListBox.Styles>
+                </ListBox>
             </Grid>
         </Border>
 
@@ -201,69 +200,57 @@
                 ColumnDefinitions="2*,3*"
                 RowDefinitions="*,Auto">
 
-                <!--  Test Control  -->
-                <ContentControl Grid.Column="0" Content="{Binding SelectedTestGroup}">
-                    <ContentControl.ContentTemplate>
-                        <DataTemplate DataType="{x:Type models:TestGroup}">
-                            <!--  Header  -->
-                            <Grid RowDefinitions="Auto, *">
+                <ContentControl DataContext="{Binding SelectedTestGroup}">
+                    <Grid RowDefinitions="Auto,*">
+                        <!--  Header  -->
+                        <Grid Grid.Row="0" ColumnDefinitions="*,Auto, Auto">
+                            <CheckBox
+                                VerticalAlignment="Center"
+                                BorderBrush="Black"
+                                Click="IsAllSelected_Click"
+                                Content="Test Cases"
+                                FontWeight="Medium"
+                                IsChecked="{Binding IsAllSelected, Mode=TwoWay}"
+                                IsThreeState="True" />
+                            <TextBlock
+                                Grid.Column="1"
+                                Margin="0,0,22,0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                FontWeight="Medium"
+                                Text="Status" />
+                        </Grid>
 
-                                <!--  Top Title: Test Cases | Status  -->
-                                <Grid Grid.Row="0" ColumnDefinitions="*,Auto">
-
-                                    <!--  Select All Checkbox  -->
-                                    <CheckBox
-                                        VerticalAlignment="Center"
-                                        BorderBrush="Black"
-                                        Content="Test Cases"
-                                        FontWeight="Medium"
-                                        IsChecked="{Binding IsAllSelected, Mode=TwoWay}"
-                                        IsThreeState="True" />
-                                    <TextBlock
-                                        Grid.Column="1"
-                                        Margin="0,0,22,0"
-                                        HorizontalAlignment="Center"
-                                        VerticalAlignment="Center"
-                                        FontWeight="Medium"
-                                        Text="Status" />
-                                </Grid>
-
-                                <ScrollViewer
-                                    Grid.Row="1"
-                                    MinHeight="100"
-                                    VerticalScrollBarVisibility="Auto">
-                                    <ItemsControl ItemsSource="{Binding Testcases}">
-                                        <ItemsControl.ItemTemplate>
-                                            <DataTemplate DataType="{x:Type models:TestCase}">
-                                                <Grid Margin="0,5,0,0" ColumnDefinitions="*, Auto">
-
-                                                    <!--  Test case Check box  -->
-                                                    <CheckBox
-                                                        Margin="0,10,10,0"
-                                                        BorderBrush="Black"
-                                                        Content="{Binding Name}"
-                                                        IsChecked="{Binding IsSelected, Mode=TwoWay}" />
-
-                                                    <!--  Status Dot  -->
-                                                    <Ellipse
-                                                        Grid.Column="1"
-                                                        Width="14"
-                                                        Height="14"
-                                                        Margin="0,0,15,0"
-                                                        HorizontalAlignment="Left"
-                                                        VerticalAlignment="Center"
-                                                        Fill="{Binding StatusColor}"
-                                                        Stroke="Black"
-                                                        StrokeThickness="0" />
-                                                </Grid>
-
-                                            </DataTemplate>
-                                        </ItemsControl.ItemTemplate>
-                                    </ItemsControl>
-                                </ScrollViewer>
-                            </Grid>
-                        </DataTemplate>
-                    </ContentControl.ContentTemplate>
+                        <!--  Test List  -->
+                        <ScrollViewer
+                            Grid.Row="1"
+                            MinHeight="100"
+                            VerticalScrollBarVisibility="Auto">
+                            <ItemsControl ItemsSource="{Binding Testcases}">
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate DataType="{x:Type models:TestCase}">
+                                        <Grid Margin="0,5,0,0" ColumnDefinitions="*, Auto, Auto">
+                                            <CheckBox
+                                                Margin="0,10,10,0"
+                                                BorderBrush="Black"
+                                                Content="{Binding Name}"
+                                                IsChecked="{Binding IsSelected, Mode=TwoWay}" />
+                                            <Ellipse
+                                                Grid.Column="1"
+                                                Width="14"
+                                                Height="14"
+                                                Margin="0,0,15,0"
+                                                HorizontalAlignment="Left"
+                                                VerticalAlignment="Center"
+                                                Fill="{Binding StatusColor}"
+                                                Stroke="Black"
+                                                StrokeThickness="0" />
+                                        </Grid>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+                        </ScrollViewer>
+                    </Grid>
                 </ContentControl>
 
                 <!--  Logs  -->
@@ -305,8 +292,10 @@
                     Margin="80,0,10,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
+                    Increment="1"
                     Maximum="100"
                     Minimum="0"
+                    ParsingNumberStyle="Integer"
                     Value="{Binding SelectedIteration}" />
 
                 <Button
