--- a/SBC.WPF/Views/MainWindow.axaml
+++ b/SBC.WPF/Views/MainWindow.axaml
@@ -19,6 +19,8 @@
     ExtendClientAreaTitleBarHeightHint="-1"
     ExtendClientAreaToDecorationsHint="True"
     Icon="/Assets/avalonia-logo.ico"
+    PointerMoved="Window_PointerMoved"
+    PointerPressed="Window_PointerPressed"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Design.DataContext>
@@ -46,8 +48,9 @@
             Grid.ColumnSpan="2"
             VerticalAlignment="Center"
             Background="{StaticResource HeaderBrush}"
+            PointerMoved="TitleBar_PointerMoved"
             PointerPressed="TitleBar_PointerPressed">
-            <Grid>
+            <Grid VerticalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="*" />
@@ -76,8 +79,8 @@
                 <!--  Minimize Btn  -->
                 <Button
                     Grid.Column="2"
-                    Width="14"
-                    Height="14"
+                    Width="35"
+                    Height="35"
                     Margin="0,0,10,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
@@ -105,8 +108,8 @@
                 <Button
                     x:Name="MaximizeButton"
                     Grid.Column="3"
-                    Width="14"
-                    Height="14"
+                    Width="35"
+                    Height="35"
                     Margin="0,0,10,0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
@@ -132,12 +135,12 @@
                 <!--  Close Btn  -->
                 <Button
                     Grid.Column="4"
-                    Width="14"
-                    Height="14"
-                    Margin="0,0,10,0"
-                    HorizontalAlignment="Center"
+                    Width="35"
+                    Height="35"
+                    HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    Click="CloseButton_Click">
+                    Click="CloseButton_Click"
+                    FontWeight="Bold">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Grid x:Name="RootGrid" Background="Transparent">
@@ -307,6 +310,8 @@
                     Margin="80,0,10,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
+                    CornerRadius="3"
+                    Cursor="Hand"
                     Increment="1"
                     Maximum="100"
                     Minimum="0"
@@ -364,7 +369,7 @@
                     BorderThickness="0"
                     Cursor="Hand">
                     <Button.Content>
- 
+
                         <Image x:Name="HamburgerIcon">
                             <Image.Styles>
                                 <Style Selector="Image">
@@ -386,7 +391,7 @@
                                     <MenuItem Header="About" IsEnabled="False" />
                                     <MenuItem Command="{Binding APIHelpCommand}" Header="API Help" />
                                     <MenuItem Header="User Manual" IsEnabled="False" />
-                                    <MenuItem Header="API Logs" />
+                                    <MenuItem Command="{Binding ExportApiLogsCommand}" Header="API Logs" />
                                     <MenuItem Header="Generate Report" IsEnabled="False" />
                                     <MenuItem Command="{Binding OpenConnectionSettingsCommand}" Header="Connection Settings" />
                                     <MenuItem Command="{Binding ExitCommand}" Header="Exit" />
