--- a/SBC.WPF/Views/APILogView.axaml
+++ b/SBC.WPF/Views/APILogView.axaml
@@ -12,12 +12,17 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     x:DataType="vm:APILogViewModel"
+    Background="White"
     CanResize="False"
     ExtendClientAreaChromeHints="NoChrome"
     ExtendClientAreaTitleBarHeightHint="-1"
     ExtendClientAreaToDecorationsHint="True"
     WindowStartupLocation="CenterOwner"
     mc:Ignorable="d">
+
+    <Design.DataContext>
+        <vm:APILogViewModel />
+    </Design.DataContext>
 
     <Grid RowDefinitions="35, *, Auto">
 
@@ -75,12 +80,16 @@
             BorderBrush="Gray"
             BorderThickness="1">
             <TextBox
-                AcceptsReturn="True"
-                Background="Transparent"
-                BorderThickness="0"
+                MinWidth="750"
+                HorizontalContentAlignment="Stretch"
+                AcceptsReturn="False"
+                Background="White"
+                BorderBrush="Transparent"
+                ClipToBounds="True"
                 Focusable="False"
                 FontFamily="Consolas"
                 FontSize="12"
+                Foreground="Black"
                 IsReadOnly="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto"
@@ -93,9 +102,13 @@
             Margin="0,5,5,10"
             HorizontalAlignment="Right"
             Orientation="Horizontal">
-            <Button Click="ExportLogsButton_Click" Content="Export" />
+            <Button
+                Classes="run-style"
+                Click="ExportLogsButton_Click"
+                Content="Export" />
             <Button
                 Margin="10,0,0,0"
+                Classes="run-style"
                 Command="{Binding ClearLogsCommand}"
                 Content="Clear" />
         </StackPanel>
