--- a/SBC.WPF/Views/ConnectionSettingsView.axaml
+++ b/SBC.WPF/Views/ConnectionSettingsView.axaml
@@ -12,6 +12,7 @@
     d:DesignHeight="450"
     d:DesignWidth="800"
     x:DataType="vm:ConnectionSettingsViewModel"
+    Background="White"
     CanResize="False"
     ExtendClientAreaChromeHints="NoChrome"
     ExtendClientAreaTitleBarHeightHint="-1"
@@ -84,8 +85,9 @@
                     Text="COM Port" />
 
                 <ComboBox
-                    Width="250"
+                    Width="270"
                     Height="10"
+                    Margin="5,0,0,0"
                     ItemsSource="{Binding AvailableComPorts}"
                     SelectedItem="{Binding SelectedComPort}" />
             </StackPanel>
@@ -98,8 +100,9 @@
                     Text="Baud Port" />
 
                 <ComboBox
-                    Width="250"
+                    Width="270"
                     Height="5"
+                    Margin="5,0,0,0"
                     ItemsSource="{Binding AvailableBaudRates}"
                     SelectedItem="{Binding SelectedBaudRate}" />
             </StackPanel>
@@ -130,33 +133,37 @@
                     <StackPanel Orientation="Horizontal">
                         <!--  IP Part 1  -->
                         <TextBox
-                            Width="53"
+                            Width="43"
                             Margin="0,0,5,0"
                             VerticalContentAlignment="Center"
+                            Classes="myStyled"
                             Text="{Binding IPPart1, UpdateSourceTrigger=PropertyChanged}"
                             Watermark="255" />
 
                         <!--  IP Part 2  -->
                         <TextBox
-                            Width="53"
+                            Width="43"
                             Margin="0,0,5,0"
                             VerticalContentAlignment="Center"
+                            Classes="myStyled"
                             Text="{Binding IPPart2, UpdateSourceTrigger=PropertyChanged}"
                             Watermark="255" />
 
                         <!--  IP Part 3  -->
                         <TextBox
-                            Width="53"
+                            Width="43"
                             Margin="0,0,5,0"
                             VerticalContentAlignment="Center"
+                            Classes="myStyled"
                             Text="{Binding IPPart3, UpdateSourceTrigger=PropertyChanged}"
                             Watermark="255" />
 
                         <!--  IP Part 4  -->
                         <TextBox
-                            Width="53"
+                            Width="43"
                             Margin="0,0,5,0"
                             VerticalContentAlignment="Center"
+                            Classes="myStyled"
                             Text="{Binding IPPart4, UpdateSourceTrigger=PropertyChanged}"
                             Watermark="255" />
                     </StackPanel>
@@ -169,12 +176,14 @@
                     Width="120"
                     VerticalAlignment="Center"
                     Text="Port" />
-                <TextBox
-                    Width="250"
-                    MaxLength="5"
-                    Text="{Binding PortInput, UpdateSourceTrigger=PropertyChanged}" />
-            </StackPanel>
 
+                <TextBox
+                    Width="270"
+                    Margin="5,0,0,0"
+                    Classes="myStyled"
+                    MaxLength="5"
+                    Text="{Binding SelectedPortText, UpdateSourceTrigger=PropertyChanged}" />
+            </StackPanel>
 
             <StackPanel Orientation="Horizontal">
                 <TextBlock
@@ -182,7 +191,10 @@
                     VerticalAlignment="Center"
                     Text="Protocol" />
                 <ComboBox
-                    Width="250"
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Width="270"
+                    Margin="5,0,0,0"
                     ItemsSource="{Binding Protocols}"
                     SelectedItem="{Binding SelectedProtocol}" />
             </StackPanel>
@@ -190,16 +202,19 @@
 
         <StackPanel
             Grid.Row="2"
-            Margin="0,0,0,50"
-            HorizontalAlignment="Center"
+            Margin="185,40,60,80"
+            HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Orientation="Horizontal">
-            <Button Command="{Binding TestConnectionCommand}" Content="Test" />
+            <Button
+                Classes="run-style"
+                Command="{Binding TestConnectionCommand}"
+                Content="Test" />
             <Button
                 Margin="10,0,0,0"
+                Classes="run-style"
                 Command="{Binding ApplySettingsCommand}"
                 Content="Apply" />
         </StackPanel>
-
     </Grid>
 </Window>
