1. SCRUM-13 SCRUM-85 Avalonia - Implement Splash screen 2. applied max length attribute to IPart(s) and increased height of labels (as they were rendered distorted on screen)

--- a/SBC.WPF/Views/ConnectionSettingsView.axaml
+++ b/SBC.WPF/Views/ConnectionSettingsView.axaml
@@ -80,13 +80,12 @@
             <StackPanel Margin="0,0,0,20" Orientation="Horizontal">
                 <TextBlock
                     Width="120"
-                    Height="10"
+                    Height="12"
                     VerticalAlignment="Center"
                     Text="COM Port" />
 
                 <ComboBox
                     Width="270"
-                    Height="10"
                     Margin="5,0,0,0"
                     ItemsSource="{Binding AvailableComPorts}"
                     SelectedItem="{Binding SelectedComPort}" />
@@ -95,13 +94,12 @@
             <StackPanel Margin="0,0,0,20" Orientation="Horizontal">
                 <TextBlock
                     Width="120"
-                    Height="10"
+                    Height="12"
                     VerticalAlignment="Center"
                     Text="Baud Port" />
 
                 <ComboBox
                     Width="270"
-                    Height="5"
                     Margin="5,0,0,0"
                     ItemsSource="{Binding AvailableBaudRates}"
                     SelectedItem="{Binding SelectedBaudRate}" />
@@ -137,6 +135,7 @@
                             Margin="0,0,5,0"
                             VerticalContentAlignment="Center"
                             Classes="myStyled"
+                            MaxLength="3"
                             Text="{Binding IPPart1, UpdateSourceTrigger=PropertyChanged}"
                             Watermark="255" />
 
@@ -146,6 +145,7 @@
                             Margin="0,0,5,0"
                             VerticalContentAlignment="Center"
                             Classes="myStyled"
+                            MaxLength="3"
                             Text="{Binding IPPart2, UpdateSourceTrigger=PropertyChanged}"
                             Watermark="255" />
 
@@ -155,6 +155,7 @@
                             Margin="0,0,5,0"
                             VerticalContentAlignment="Center"
                             Classes="myStyled"
+                            MaxLength="3"
                             Text="{Binding IPPart3, UpdateSourceTrigger=PropertyChanged}"
                             Watermark="255" />
 
@@ -164,6 +165,7 @@
                             Margin="0,0,5,0"
                             VerticalContentAlignment="Center"
                             Classes="myStyled"
+                            MaxLength="3"
                             Text="{Binding IPPart4, UpdateSourceTrigger=PropertyChanged}"
                             Watermark="255" />
                     </StackPanel>
